--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ blinker==1.4
 Flask==0.10.1
 Flask-Mail==0.9.1
 Flask-OAuth==0.12
+Flask-OAuthlib==0.9.2
 httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 oauth2==1.9.0.post1
+oauthlib==1.0.3
 pymongo==3.1
+requests==2.8.1
+requests-oauthlib==0.5.0
 Werkzeug==0.10.4
 wheel==0.24.0
 Cerberus==0.9.2
